--- a/src/app/component/edit-data/edit-data.component.html
+++ b/src/app/component/edit-data/edit-data.component.html
@@ -7,23 +7,23 @@
 <div class="container mt-5">
   <form [formGroup]="updateSheetForm" (ngSubmit)="onSubmit()">
     <div class="mb-3">
-      <label for="name" class="form-label">Name</label>
-      <input type="text" class="form-control" id="name" placeholder="name" formControlName="name">
+      <label for="Date" class="form-label">Date</label>
+      <input type="text" class="form-control" id="Date" placeholder="Date" formControlName="Date">
     </div>
 
     <div class="mb-3">
-      <label for="platform" class="form-label">Platform</label>
-      <input type="text" class="form-control" id="platform" placeholder="platform" formControlName="platform">
+      <label for="Time" class="form-label">Time</label>
+      <input type="text" class="form-control" id="Time" placeholder="Time" formControlName="Time">
     </div>
 
     <div class="mb-3">
-      <label for="technology" class="form-label">Technology</label>
-      <input type="text" class="form-control" id="technology" placeholder="technology" formControlName="technology">
+      <label for="FirstName" class="form-label">First Name</label>
+      <input type="text" class="form-control" id="FirstName" placeholder="FirstName" formControlName="FirstName">
     </div>
 
     <div class="mb-3">
-      <label for="link" class="form-label">Link</label>
-      <input type="text" class="form-control" id="link" placeholder="link" formControlName="link">
+      <label for="LastName" class="form-label">Last Name</label>
+      <input type="text" class="form-control" id="LastName" placeholder="LastName" formControlName="LastName">
     </div>
 
     <button [disabled]="updateSheetForm.invalid || updateSheetForm.pristine"
