--- a/src/app/component/edit-data/edit-data.component.html
+++ b/src/app/component/edit-data/edit-data.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <button class="btn btn-primary" routerLink="/list-data">Home</button>
+
   </div>
 </nav>
 
@@ -14,6 +15,11 @@
     <div class="mb-3">
       <label for="Time" class="form-label">Time</label>
       <input type="text" class="form-control" id="Time" placeholder="Time" formControlName="Time">
+    </div>
+
+    <div class="mb-3">
+      <label for="ID" class="form-label">ID</label>
+      <input type="number" class="form-control" id="ID" placeholder="ID" formControlName="ID">
     </div>
 
     <div class="mb-3">
