--- a/src/app/component/create-data/create-data.component.html
+++ b/src/app/component/create-data/create-data.component.html
@@ -17,6 +17,11 @@
     </div>
 
     <div class="mb-3">
+      <label for="ID" class="form-label">ID</label>
+      <input type="text" class="form-control" id="ID" placeholder="ID" formControlName="ID">
+    </div>
+    
+    <div class="mb-3">
       <label for="FirstName" class="form-label">First Name</label>
       <input type="text" class="form-control" id="FirstName" placeholder="FirstName" formControlName="FirstName">
     </div>
