--- a/src/app/component/create-data/create-data.component.html
+++ b/src/app/component/create-data/create-data.component.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="btn btn-primary" routerLink="/list-data">Home</button>
+  <div class="container-fluid" style="background-image: url('assets/ssst2.jpg'); background-repeat: no-repeat; background-position: center; padding: 50px" ></div>
+
+  <div class="container-fluid" style="padding: 10px" >
+    <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Add To Sheet</button>
+    <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Class Name: Software Engineering</button>
+    <button class="btn btn-primary" routerLink="/login" style="background: #C5C6CA; color: black; padding: 10px;" >Log Out</button>
   </div>
 </nav>
 
@@ -20,7 +24,7 @@
       <label for="ID" class="form-label">ID</label>
       <input type="text" class="form-control" id="ID" placeholder="ID" formControlName="ID">
     </div>
-    
+
     <div class="mb-3">
       <label for="FirstName" class="form-label">First Name</label>
       <input type="text" class="form-control" id="FirstName" placeholder="FirstName" formControlName="FirstName">
