--- a/src/app/component/list-data/list-data.component.html
+++ b/src/app/component/list-data/list-data.component.html
@@ -3,7 +3,7 @@
 
   <div class="container-fluid" style="padding: 10px" >
     <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Add To Sheet</button>
-    <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Class Name: Software Engineering</button>
+    <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Welcome to: Software Engineering</button>
     <button class="btn btn-primary" routerLink="/login" style="background: #C5C6CA; color: black; padding: 10px;" >Log Out</button>
   </div>
 </nav>
