minor rounting enhancement

--- a/src/app/component/create-data/create-data.component.html
+++ b/src/app/component/create-data/create-data.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid" style="background-image: url('assets/ssst2.jpg'); background-repeat: no-repeat; background-position: center; padding: 50px" ></div>
 
   <div class="container-fluid" style="padding: 10px" >
-    <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Add To Sheet</button>
+    <button class="btn btn-primary" routerLink="/list-data" style="background: #C5C6CA; color: black; padding: 10px;" >Class Sheet</button>
     <button class="btn btn-primary" routerLink="/create-data" style="background: #C5C6CA; color: black; padding: 10px;" >Class Name: Software Engineering</button>
     <button class="btn btn-primary" routerLink="/login" style="background: #C5C6CA; color: black; padding: 10px;" >Log Out</button>
   </div>
